--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,7 @@
   color: white;
   text-decoration: none;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-@supports (-webkit-touch-callout: none) {
-  body {
-    min-height: -webkit-fill-available;
-  }
+  -webkit-user-drag: none;
 }
 
 ::-webkit-scrollbar {
@@ -30,8 +25,11 @@ h3,
 span select,
 input,
 textarea,
-.to_am {
-  backdrop-filter: blur(5px);
+.to_am,
+.refresh,
+.player,
+.introductionTxt {
+  backdrop-filter: blur(15px);
   background-color: rgba(0, 0, 0, 0.3);
 }
 
@@ -47,7 +45,8 @@ textarea,
 .mobileNavContent,
 .logBox,
 .date,
-.to_am {
+.to_am,
+.refresh {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -68,21 +67,20 @@ textarea,
 }
 
 .left {
-  width: 16vw;
+  width: 8vw;
   height: 95vh;
   display: flex;
   align-items: center;
 }
 
 .right {
-  margin-left: -8vw;
   width: 92vw;
   height: 95vh;
   overflow: scroll;
 }
 
 .rightBox {
-  margin: 2.2vh 0 0 2vw;
+  margin: 1vw 1vw 0 0;
 }
 
 .h1Icon {
@@ -93,7 +91,7 @@ textarea,
 .bottom {
   width: 100vw;
   height: 5vh;
-  font-size: 1vw;
+  font-size: 18px;
 }
 
 h1,
@@ -121,18 +119,17 @@ h3 {
 
 .messageBox {
   width: 100%;
-  height: max-content;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
+  gap: 20px;
+  margin-bottom: 1vw;
 }
 
 .message {
-  width: 300px;
-  padding: 1.5vw;
+  padding: 20px;
   border-radius: 1vw;
   font-size: 18px;
-  transition: 0.3s;
-  margin: 0 20px 10px 0;
+  transition: transform 0.3s, background-color 0.3s, box-shadow 0.3s;
 }
 
 @media screen and (min-width: 601px) {
@@ -142,18 +139,19 @@ h3 {
   .navBtn:hover,
   .logBox:hover,
   .message_other:hover,
-  .to_am:hover {
-    transform: scale(1.035);
-    box-shadow: 0 0 15px white;
-    background-color: rgba(255, 255, 255, 0.1);
+  .to_am:hover,
+  .refresh:hover {
+    /* box-shadow: 0 0 15px white; */
+    background-color: rgba(0, 0, 0, 0.5);
   }
 
   .message:active,
   .navBtn:active,
   .logBox:active,
   .to_am:active,
-  .message_other:active {
-    transform: scale(1);
+  .message_other:active,
+  .refresh:active {
+    transform: scale(0.97);
     box-shadow: 0 0 10px white;
     background-color: black;
   }
@@ -204,7 +202,9 @@ h3 {
   }
 
   .messageBox {
-    justify-content: center;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    gap: 15px;
   }
 
   .message {
@@ -213,14 +213,14 @@ h3 {
     padding: 1.5vh;
     border-radius: 1.5vh;
     font-size: 2vh;
-    margin: 0 0 1.5vh 0;
   }
 
   .message:active,
   .navBtn:active,
   .logBox:active,
   .to_am:active,
-  .message_other:active {
+  .message_other:active,
+  .refresh:active {
     transform: scale(0.95);
     background-color: black;
     box-shadow: 0 0 10px white;
