--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,11 @@
 * {
   margin: 0;
   padding: 0;
+  font-size: 17px;
   color: white;
   text-decoration: none;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-user-drag: none;
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
 
 /* 背景高斯模糊+变暗 */
@@ -22,9 +19,6 @@
 .switchBtn:active,
 .logBox,
 h3,
-span select,
-input,
-textarea,
 .to_am,
 .refresh,
 .player,
@@ -42,7 +36,6 @@ textarea,
 .icon,
 .mobileNav,
 .switchBtn,
-.mobileNavContent,
 .logBox,
 .date,
 .to_am,
@@ -76,11 +69,11 @@ textarea,
 .right {
   width: 92vw;
   height: 95vh;
-  overflow: scroll;
+  overflow: hidden scroll;
 }
 
 .rightBox {
-  margin: 1vw 1vw 0 0;
+  margin: 15px 15px 0 0;
 }
 
 .h1Icon {
@@ -91,7 +84,6 @@ textarea,
 .bottom {
   width: 100vw;
   height: 5vh;
-  font-size: 18px;
 }
 
 h1,
@@ -111,24 +103,22 @@ h2 {
 
 h3 {
   width: max-content;
-  padding: 1vw;
-  font-size: 18px;
-  border-radius: 1vw;
+  padding: 15px;
+  border-radius: 15px;
   font-weight: 400;
 }
 
 .messageBox {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  gap: 15px;
   margin-bottom: 1vw;
 }
 
 .message {
   padding: 20px;
-  border-radius: 1vw;
-  font-size: 18px;
+  border-radius: 15px;
   transition: transform 0.3s, background-color 0.3s, box-shadow 0.3s;
 }
 
@@ -141,19 +131,7 @@ h3 {
   .message_other:hover,
   .to_am:hover,
   .refresh:hover {
-    /* box-shadow: 0 0 15px white; */
     background-color: rgba(0, 0, 0, 0.5);
-  }
-
-  .message:active,
-  .navBtn:active,
-  .logBox:active,
-  .to_am:active,
-  .message_other:active,
-  .refresh:active {
-    transform: scale(0.97);
-    box-shadow: 0 0 10px white;
-    background-color: black;
   }
 }
 
@@ -189,12 +167,10 @@ h3 {
   .bottom {
     width: 100vw;
     height: 5vh;
-    font-size: 1.5vh;
   }
 
   h3 {
     font-size: 16px;
-    border-radius: 1vh;
   }
 
   .h1Icon {
@@ -205,24 +181,24 @@ h3 {
     grid-template-columns: 1fr;
     justify-items: center;
     gap: 15px;
+    margin-bottom: 15px;
   }
 
   .message {
     width: 70vw;
     height: 5vh;
-    padding: 1.5vh;
-    border-radius: 1.5vh;
-    font-size: 2vh;
+    padding: 15px;
   }
+}
 
-  .message:active,
-  .navBtn:active,
-  .logBox:active,
-  .to_am:active,
-  .message_other:active,
-  .refresh:active {
-    transform: scale(0.95);
-    background-color: black;
-    box-shadow: 0 0 10px white;
-  }
+
+.message:active,
+.navBtn:active,
+.logBox:active,
+.to_am:active,
+.message_other:active,
+.refresh:active {
+  transform: scale(0.97);
+  box-shadow: 0 0 10px white;
+  background-color: black;
 }
